--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="loader" id="loader"></div>
     <div class="overlay" id="overlay"></div>
     <div class="popup" id="popup">
-        <p>MUHUAHAHAHA SCAM HOGAYA.</p>
+        <p>Welcome! This is your popup message.</p>
         <button onclick="closePopup()">Close</button>
     </div>
     <script>
@@ -58,4 +58,3 @@
     </script>
 </body>
 </html>
-
