--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="loader" id="loader"></div>
     <div class="overlay" id="overlay"></div>
     <div class="popup" id="popup">
-        <p>Welcome! This is your popup message.</p>
+        <p>Welcome! COMMING SOON.</p>
         <button onclick="closePopup()">Close</button>
     </div>
     <script>
